# x86toARMJit

./: .clang-format  Agents.md  CMakeLists.txt  README.md  build.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARM_FPU_OPTIMIZATIONS.md  BUILD_AND_TEST.md  CODING_STANDARDS.md  CONTRIBUTING.md  DECISION_LOG.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_PLAN.md  EXTERNAL_REFERENCES.md  FUTURE_DEVELOPMENT.md  GUEST_EXCEPTION_HANDLING.md  IR_DESIGN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE6_README.md  PHASE6_TODO.md  PHASE7_COMPLETION.md  PHASE7_PLANNING.md  PHASE_5_COMPLETION.md  README.md  REGISTER_ALLOCATION.md  RELEASE_NOTES_V1.0.md  TESTING_STRATEGY.md  V1.0_RELEASE_COMPLETION.md  V1.1_DEVELOPMENT_PLAN.md  project-overview.md
docs/architecture/: fpu_transcendental_flow.md
docs/pull_requests/: pr_phase8_completion.md
include/aarch64/: code_generator.h
include/decoder/: decoder.h
include/eflags/: eflags_state.h
include/ir/: ir.h  ir_dumper.h
include/jit_core/: c_api.h  jit_api.h
include/simd/: simd_state.h
include/translation_cache/: translation_cache.h
include/xenoarm_jit/: api.h  decoder.h  exception_handler.h  floating_point_conversion.h  fpu_transcendental_helpers.h  ir.h  ir_dumper.h  memory_manager.h  memory_model.h  signal_handler.h  simd_helpers.h  simd_state.h  xenoarm_jit.h
include/xenoarm_jit/aarch64/: arm_assembler.h  code_generator.h  fpu_code_gen.h
include/xenoarm_jit/codegen/aarch64/: code_generator.h
include/xenoarm_jit/decoder/: decoder.h  fpu_decoder.h
include/xenoarm_jit/eflags/: eflags_state.h
include/xenoarm_jit/host_stub/: host_emulator.h
include/xenoarm_jit/register_allocation/: register_allocator.h
include/xenoarm_jit/translation_cache/: translation_cache.h
src/: CMakeLists.txt  memory_manager.cpp  memory_model.cpp  signal_handler.cpp
src/aarch64/: arm_assembler.cpp  code_generator.cpp  fpu_code_gen.cpp
src/decoder/: decoder.cpp  fpu_decoder.cpp  x86_decoder.cpp
src/eflags/: eflags_state.cpp
src/host_stub/: host_emulator.cpp  main.cpp
src/ir/: ir.cpp  ir_dumper.cpp
src/jit_core/: c_api_stubs.cpp  exception_handler.cpp  jit_api.cpp  xenoarm_jit_api.cpp
src/logging/: logger.cpp  logger.h
src/register_allocation/: register_allocator.cpp
src/simd/: floating_point_conversion.cpp  fpu_transcendental_helpers.cpp  simd_helpers.cpp  simd_state.cpp
src/translation_cache/: translation_cache.cpp
tests/: CMakeLists.txt  api_tests.cpp  fpu_decoder_test.cpp  fpu_exception_test.cpp  fpu_optimization_test.cpp  fpu_transcendental_test.cpp  memory_model_test.cpp  register_allocator_test.cpp  smc_test.cpp
tests/arch_tests/: CMakeLists.txt  arch_test_runner.cpp
tests/benchmarks/: CMakeLists.txt  benchmark_runner.cpp
tests/code_gen/: CMakeLists.txt  code_gen_tests.cpp
tests/control_flow/: CMakeLists.txt  control_flow_tests.cpp
tests/decoder/: CMakeLists.txt  decoder_tests.cpp
tests/dispatcher/: CMakeLists.txt  dispatcher_tests.cpp
tests/integer_ops/: CMakeLists.txt  integer_ops_tests.cpp
tests/ir/: CMakeLists.txt  ir_tests.cpp
tests/simd/: CMakeLists.txt  simd_tests.cpp
